syntax = "proto3";

package bussiness;

import "vlc.proto";

// business data
// ZMessage.type = Z_TYPE_CHAT
message ZChat {
	string message_data = 1;
	vlc.ClockInfo clock = 2;
}

// ZMessage.type = Z_TYPE_GATEWAY
// Gateway just only needs read api
message ZGateway {
    GatewayType type = 1;
    bytes data = 2;
}

enum GatewayType {
  GATEWAY_TYPE_CLOCK_NODE = 0;
  GATEWAY_TYPE_MERGE_LOG = 1;   // ref merge log
  GATEWAY_TYPE_NODE_INFO = 2;  // heartbeat or node info
}

// ZGateway.type = GATEWAY_TYPE_CLOCK_NODE
message ClockNode {
    vlc.Clock clock = 1;
    bytes id = 2;
    bytes message_id = 3;
    uint64 count = 4;
    uint64 create_at = 5;
    bytes raw_message = 6;
}

// ZGateway.type = GATEWAY_TYPE_NODE_INFO
message NodeInfo {
    repeated string node_ids = 1;
}