syntax = "proto3";

package zmessage;

message ZMessage {
    bytes id = 1;
    uint32 version = 2;
    ZType type = 3;
    ZAction action = 4;
    ZIdentity identity = 5;  // for p2p 
    bytes public_key = 6;
    bytes data = 7;
    bytes signature = 8;
    bytes from = 9;
    bytes to = 10;
  }

enum ZType {
    Z_TYPE_RNG = 0;
    Z_TYPE_EVENT = 1;
    Z_TYPE_CLOCK = 2;
    Z_TYPE_GATEWAY = 3;
    Z_TYPE_ZCHAT = 4;
}

enum ZIdentity {
    U_TYPE_CLI = 0;  // client
    U_TYPE_SER = 1;  // server
}

enum ZAction {
    Z_TYPE_READ = 0;  // read
    Z_TYPE_WRITE = 1;  // write
}

message Rng {
    uint32 version = 1;
    uint64 num = 2;
    bytes proof = 3;
}