syntax = "proto3";

package zp2p;

import "zmessage.proto";

// Zp2p
message Zp2p {
    uint32 version = 1;
    Identity type = 2;  // for p2p
    Action action = 3;   // for p2p
    PushType push_type = 4;        // for vlc
    zmessage.ZMessage message = 5; 
    bytes public_key = 6;
    bytes signature = 7;  // for verifying 
}

enum Identity {
    IDENTITY_CLI = 0;  // client
    IDENTITY_SER = 1;  // server
}

enum Action {
    ACTION_READ = 0;  // read
    ACTION_WRITE = 1;  // write
}

enum PushType {
	PUSH_TYPE_DM = 0;   // direct msg
	PUSH_TYPE_BC = 1;   // broadcast
}